fix(StarryNight): improve visibility of text on artist page and fix occasional missing shooting stars (#1112)

--- a/StarryNight/user.css
+++ b/StarryNight/user.css
@@ -6,12 +6,9 @@
   background-color: #00000000 !important;
 }
 
-.main-actionBarBackground-background {
-  background-color: #00000000 !important;
-}
-
 .main-home-homeHeader {
   background-color: #00000000 !important;
+  background-image: none !important;
 }
 
 .Root__top-container {
@@ -27,7 +24,6 @@
     "global-nav global-nav global-nav"
     "left-sidebar main-view now-playing-bar"
     "left-sidebar main-view right-sidebar" !important;
-  grid-template-rows: auto 1fr 1fr;
 }
 
 .Root__right-sidebar {
@@ -75,15 +71,19 @@
 }
 
 .main-actionBarBackground-background {
-  background-image: linear-gradient(rgba(var(--spice-rgb-shadow), .6) 0, #000000 100%), #00000000 !important;
+  background-image: none;
+  background-color: #00000000 !important;
   animation: none !important;
   -webkit-animation: none !important;
 }
 
-.main-entityHeader-background.main-entityHeader-overlay {
-  background-image: none !important;
+.main-entityHeader-overlay {
+  background: none !important;
+}
+
+.main-entityHeader-background.main-entityHeader-gradient {
+  opacity: 0.5;
   animation: none !important;
-  -webkit-animation: none !important;
 }
 
 .main-entityHeader-background.main-entityHeader-overlay:after {
@@ -93,7 +93,7 @@
 }
 
 .pUNc2aOeOQANHrhYa1GU .RDZ61ETnag1ilfZTkVxe {
-  color: #000000 !important;
+  color: #00000000 !important;
 }
 
 .playlist-playlist-playlistContent {
@@ -120,10 +120,6 @@
 
 .Root__main-view {
   background-color: #00000000 !important;
-}
-
-.main-home-homeHeader {
-  background-image: linear-gradient(rgba(var(--spice-rgb-shadow), .6) 0, #00000000 100%), var(--background-noise);
 }
 
 .main-nowPlayingBar-center {
